[package]
name = "chaoscrypto_noise"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
noise = "0.8"  # für Perlin, Simplex etc.
sha2 = "0.10"
hex = "0.4"
js-sys = "0.3.77"

[features]
default = ["console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[profile.release]
opt-level = "s"