[package]
name = "chaoscrypto_noise"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
noise = "0.8"  # für Perlin, Simplex etc.
sha2 = "0.10"
hex = "0.4"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[features]
default = ["console_error_panic_hook"]
python = ["pyo3"]
wasm = ["wasm-bindgen", "js-sys"]

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[profile.release]
opt-level = "s"